--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 <div class="flex-center-column box endless-extras-box cash-or-card-h">
                     <div class="flex-center endless-img cash-or-card-clm">
                         <h3>2<i class="fa-solid fa-star"></i> per dollar</h3>
-                        <p>Pay as you go</p>
+                        <p>Add funds in the app</p>
                     </div> 
                 </div>
 
@@ -328,7 +328,7 @@
     
                         <div class="flex-center-column step-info endless-info cash-or-card-hh">
                             <h2>Scan & pay separately</h2>
-                            <p>Use cash or credit/debit card at the register.</p>
+                            <p>To save time and earn Stars twice as fast, add money to your digital Starbucks Card using any payment option. Scan and pay in one step or order ahead in the app.</p>
                         </div>
                     </div>
                     <div class="flex-center-column box for-cash-or-card-row">
@@ -337,7 +337,7 @@
                         </div>
                         <div class="flex-center-column step-info endless-info cash-or-card-hh">
                             <h2>Save payment in the app</h2>
-                            <p>Check-out faster by saving a credit/debit card or PayPal to your account. You'll be able to order ahead or scan and pay at the register in one step.</p>
+                            <p>Then use it to pay through the app. You can even consolidate balances from multiple cards in one place.</p>
                         </div>   
                     </div>
                 </div>
